--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,96 @@
 # Welcome to Jekyll!
 #
 # This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
+# which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+# 'jekyll serve'. If you change this file, please restart the server process.
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+# Site title
+title: "Engineerious"
 
-# Build settings
+# A description of your site for social meta tag, search engines, and feed.xml
+description: "BlogInn is a bold theme for the Jekyll blogging platform. Available for purchase at ThemeForest.net."
+
+# Tagline near the site title
+tagline: "IT tutorials, thoughts, stories, and ideas."
+
+# The subpath of site, e.g. /blog, for generating urls
+baseurl:
+
+sass:
+  sass_dir: _sass
+
+# The base hostname & protocol of your site for where absolute urls are needed
+url: "http://engineerious.com"
+
+# Site navigation - each item must have a title and a url.
+navigation:
+- text: Home
+  url: /
+- text: About the blog
+  url: /about/
+- text: About the contributors
+  url: /style-guide/
+- text: Articles
+  url: /tags/
+
+# The shortname for your Disqus site to enable comments.
+disqus:
+
+# Author information - author info at the bottom of the post
+author_name: "About this blog"
+author_bio: "The authors of this blog are active software engineers from a divers technical background looking to help others increase thier knowledge within specific subjects, assist others in understanding, inspire ideas, and gather feedback from the community."
+author_url:  "http://engineerious.com"
+author_location: "Arizona"
+author_image: /images/authorimage.png
+
+# Author1 information - author info at the bottom of the post
+author1_name: "Arthur Miller"
+author1_bio: ""
+author1_url: ""
+author1_location: "Arizona"
+author1_image: /images/authorimage.png
+
+# Author2 information - author info at the bottom of the post
+author2_name: "Someone"
+author2_bio: ""
+author2_url:  ""
+author2_location: "Arizona"
+author2_image: /images/authorimage.png
+
+# Author3 information - author info at the bottom of the post
+author3_name: "Someone Else"
+author3_bio: ""
+author3_url:  ""
+author3_location: "Arizona"
+author3_image: /images/authorimage.png
+
+# Sidebar Add banner
+banner_url: "http://justgoodthemes.com"
+banner_image: images/banner.jpg
+
+# Sidebar newsletter widget - add your form action url for MailChimp signup form here
+mailchimp_url: "//justgoodthemes.us3.list-manage.com/subscribe/post?u=78f1bab16028354caeb23aecd&amp;id=4a7330d117"
+
+# Social links in the site footer
+twitter_username: "username"
+facebook_username: "username"
+googleplus_username: "+username"
+github_username: "username"
+codepen_username: "username"
+dribbble_uername: "username"
+medium_username: "@username"
+instagram_username: "username"
+pinterest_username: "username"
+linkedin_username: "username"
+weibo_username: "username"
+
+# http://jekyllrb.com/docs/pagination/
+paginate: 5
+paginate_path: '/blog/page:num/'
+plugins: [jekyll-paginate]
+
+permalink: pretty
 markdown: kramdown
-theme: minima
-plugins:
-  - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+kramdown:
+    auto_ids: false
