--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ author_image: /images/authorimage.png
 # Author1 information - author info at the bottom of the post
 author1_name: "Arthur Miller"
 author1_bio: "Arthur is a software engineer that loves to dive into new technologies while at the same time examining where improvements can be made on existing technologies and processes. Whether it is in performance, reliability, resilience, or even the software engineering process itself, there is always something to be improved, and Arthur eagerly seeks out those opportunities. Currently, Arthur is a Software Engineering Team Lead by official title but loves both the hands-on side of software engineering (where he can write code and create value) as well as the software engineering management side (where he can improve processes, lead innovative change, and assist in building the skills and careers of others)."
-author1_url: ""
+author1_url: "https://www.linkedin.com/in/arthur-miller-64b32165/"
 author1_location: "Arizona"
 author1_image: /images/authorimage.png
 
